# z-claw

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
.prototype/: UX_UI.tsx
crates/zeroclaw/: .gitkeep  Cargo.toml
docs/: submodule-and-dependency-guide.md
docs/adr/: 0001-embedded-zeroclaw.md
docs/changed/: 2025-03-14 18-59-00.md  2025-03-14 19-30-00.md  2025-03-14 20-00-00.md  2025-03-14 20-20-00.md  2025-03-14 20-35-00.md  2026-03-14 12-00-00.md  2026-03-14 14-30-00.md  2026-03-14 16-00-00.md  2026-03-14 21-00-00.md  2026-03-14 frontend-design-redesign.md
docs/contracts/: tauri-command-contract-v1.md
docs/plans/: 2026-03-13-zeroclaw-gui-embedded-sprint-plan.md
project.inlang/: settings.json
scripts/: ensure-zeroclaw-binary.ps1  ensure-zeroclaw-binary.sh  ensure-zeroclaw.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  config_bridge.rs  gateway.rs  lib.rs  main.rs
src-tauri/src/bridge/: config.rs  logs.rs  mod.rs  service.rs  tools.rs  types.rs  workspace.rs
src/lib/components/: AgentSidebar.svelte  ChannelSidebar.svelte  ChatArea.svelte  LogsPanel.svelte  RightPanel.svelte  Settings.svelte  SettingsPanel.svelte  SidebarNav.svelte  SidebarSecondary.svelte  SystemLogs.svelte  TitleBar.svelte  Titlebar.svelte  ToolsPanel.svelte
src/lib/stores/: app.ts
src/lib/types/: config.ts  logs.ts  tools.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
thoughts/ledgers/: CONTINUITY_ses_318f.md
thoughts/shared/designs/: 2026-03-13-config-system-design.md
thoughts/shared/plans/: 2026-03-13-config-system.md
