[workspace]
members = ["crates/*", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.0.1"
description = ""
repository = "https://github.com/z-claw/z-claw.git"
authors = ["Fynn Tang <fzpying@gmail.com>"]
license = "Apache-2.0 OR MIT"
edition = "2024"


[workspace.dependencies]
zeroclaw = { path = "crates/zeroclaw" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
