[package]
name = "zclaw-desktop"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"

# HTTP client for LLM API calls
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Configuration
dirs = "5"
toml = "0.8"
chrono = "0.4"

zeroclaw.workspace = true
